--- a/views/index.html
+++ b/views/index.html
@@ -4,13 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.bootcss.com/font-awesome/5.11.2/css/all.css">
     <link rel="stylesheet" href="../public/css/index.css">
     <title>index</title>
 </head>
 <body>
     <div class="content">
+        <div class="header">
+            <a href="#"><img class="logo" src="../public/images/logo.png" alt="logo"></a>
+            <div class="nav">
+                <ul>
+                    <li class="home"><a href="#">home</a></li>
+                    <li class="about"><a href="#">about</a></li>
+                    <li class="login"><a href="#">login</a></li>
+                    <div class="slider"></div>
+                </ul>
+            </div>
+        </div>
+
         <div class="title">
-            <h2>Welcome to My Web!</h2>
+            <div class="home_text">
+                <h2>Welcome to My Web! &nbsp;</h2>
+                <span>欢迎来到我的网站！</span>
+            </div>
         </div>
     
         <div class="box">
@@ -46,6 +62,24 @@
                         <a href="javascript:;" id="link_login">去登录账号</a>
                     </div>
                 </form>
+            </div>
+        </div>
+
+        <div class="about_text">
+            <h2>关于我们</h2>
+            <ul class="mg">
+                <li>邮箱：2021113650@stu.hit.edu.cn</li><br>
+                <li>地址：哈尔滨工业大学</li><br>
+                <li>学院：网络空间安全学院</li>
+            </ul>
+            <div class="icon"> 
+                <ul>
+                    <li><a href="https://www.bilibili.com/" target="_blank"><img class="svg-icon" src="../public/css/bilibili.svg" alt="bilibili"></a></li>
+                    <li><a href="https://wx.qq.com/" target="_blank"><i class="fab fa-weixin"></i></a></li>
+                    <li><a href="https://m.weibo.cn/" target="_blank"><i class="fab fa-weibo"></i></a></li>
+                    <li><a href="https://github.com/" target="_blank"><i class="fab fa-github"></i></a></li>
+                    <li><a href="https://xn--flw351e.ml/" target="_blank"><i class="fab fa-google"></i></a></li>
+                </ul>
             </div>
         </div>
     </div>
