--- a/views/my/homepage.html
+++ b/views/my/homepage.html
@@ -10,7 +10,8 @@
 <body>
     <div>
         <div class="header">
-            <a id="logout" href="javascript:;">退出</a>
+            <a id="logout" href="javascript:;">logout</a>
+            <div class="slider_logout"></div>
         </div>
         
         <div class="sidebar_left">
@@ -19,6 +20,7 @@
                 <li><a href="#profile">个人资料</a></li>
                 <li><a href="#article">文章</a></li>
                 <li><a href="#comment">留言</a></li>
+                <li><a href="#comment">关于</a></li>
                 <div class="slider"></div>
             </ul>
         </div>
